# photo-darkroom-manager

./: .gitignore  .pre-commit-config.yaml  BIG_PICTURE.md  DEV.md  LICENSE  README.md  TODO.md  darkroom.yaml  main.py  pyproject.toml
.cursor/agents/: explorative-researcher.md  implementation-reviewer.md  plan-reviewer.md
.cursor/plans/: archive-prepare-side-effect_d9157708.plan.md  darkroom_gui_cockpit_30ea14b6.plan.md  external_app_launch_1122a87a.plan.md  fix_subfolder_stats_0f5509c5.plan.md  new-album_cli_command_b6e1222f.plan.md  test_suite_plan_fe2cfca9.plan.md
.cursor/plans/done/: actions_to_classes_9382870b.plan.md  add_gui_test_data_folders_0386a8e7.plan.md  additive_archive_merge_f677cc27.plan.md  album_naming_validation_98d86f6e.plan.md  darkroomui_class_refactor_254cf11d.plan.md  drop_cli,_unify_package_1c4dfb11.plan.md  external_app_launch_1122a87a.plan.md  gui_preview_before_execute_161c8417.plan.md  new_album_cli_command_5bc0b929.plan.md  new_album_name_optional_b14d3c01.plan.md  path_translation_methods_8bc18fee.plan.md  refactor_tidy_logic_2a0809b1.plan.md  settings_page_routing_14a50551.plan.md  stricter_album_validation_96aa4cff.plan.md
.cursor/rules/: development-guide.mdc
.cursor/skills/explorative-researcher/: SKILL.md
.github/workflows/: ci.yml  pre-commit.yml
docs/superpowers/plans/: 2026-04-12-external-apps.md
docs/superpowers/specs/: 2026-04-12-external-apps-design.md
src/photo_darkdroom_manager/: cli.py  config.py  darkroom.py  main.py
src/photo_darkroom_manager/: actions.py  cli.py  config.py  constants.py  darkroom.py  file_utils.py  manager.py  media.py  models.py  scan.py  settings.py
src/photo_darkroom_manager/gui/: actions.py  app.py  config.py  gui_app.py  layout.py  model.py  scanner.py
tests/: conftest.py  test_manager.py  test_media.py  test_models.py  test_scan.py  test_settings.py
tests/actions/: __init__.py  test_archive.py  test_new_album_rename.py  test_open_external.py  test_publish.py  test_tidy.py
tests/data/: README.md  create_test_data_fixtures.py
tests/file_utils/: __init__.py  test_merge.py  test_move.py  test_prune.py
